--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,24 +1,27 @@
 * {
-	/* font-family: "Jet Brains Mono", "Font Awesome 6 Free"; font weight, font size and font. propo nerd font for centered icons, symbols nerd font does not work great on bold text */
-	font-family: "JetBrainsMono Nerd Font Propo";
-	min-height: 0;
-	font-weight: bold;
-	font-size: 14px;
+    font-family: "JetBrainsMono Nerd Font Propo";
+    font-weight: bold;
+    font-size: 14px;
+    min-height: 0;
 }
 
 window#waybar {
-	/* background: transparent; */
-    background: #15161e;
+    background: transparent;
+    /* main window transparent background */
 }
 
 tooltip {
-	background: #15161e; /* tooltip background */
-	border: 2px solid #c0caf5; /* tooltip border size and color */
-	border-radius: 5px; /* tooltip rounded corners */
+    background: #15161e;
+    /* tooltip background */
+    border: 2px solid #c0caf5;
+    /* tooltip border size and color */
+    border-radius: 5px;
+    /* tooltip rounded corners */
 }
 
 #custom-launcher,
 #workspaces button,
+#mpris,
 #privacy-item,
 #bluetooth,
 #clock,
@@ -30,15 +33,13 @@ tooltip {
 #pulseaudio,
 #gamemode,
 #language,
-#power-profiles-daemon,
 #network,
 #custom-updates {
     text-shadow: 1px 1px 2px black;
     /* text shadow, offset-x | offset-y | blur-radius | color */
-    background: #1e2030;
-    /* #15161e */
+    background: #15161e;
     /* background color */
-    margin: 6px 4px 6px 4px;
+    margin: 0px 4px 4px 4px;
     /* empty spaces around */
     padding: 4px 10px;
     /* extend pill size, vertical then horizontal */
@@ -50,31 +51,31 @@ tooltip {
 }
 
 #custom-updates {
-  color: #b4befe;
+    color: #b4befe;
 }
 
 #network {
-  color: #89b4fa;
+    color: #89b4fa;
 }
 
 #language {
-  color: #74c7ec;
+    color: #74c7ec;
 }
 
 #backlight {
-	color: #94e2d5;
+    color: #94e2d5;
 }
 
 #pulseaudio {
-  color: #a6e3a1;
+    color: #a6e3a1;
 }
 
 #memory {
-  color: #eba0ac;
+    color: #eba0ac;
 }
 
 #cpu {
-  color: #f38ba8;
+    color: #f38ba8;
 }
 
 /* extend empty space on both side of the bar,
@@ -82,58 +83,59 @@ tooltip {
  * gaps_out (8px) + border size (2px) = 10px */
 
 #clock {
-	padding-right: 5px;
+    padding-right: 5px;
 }
 
 #privacy-item {
-  background: #e64553;
-  color: #15161e;
+    background: #e64553;
+    color: #15161e;
 }
 
 #tray menu {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 #workspaces {
-	padding: 0 3px; /* remove padding around workspace module */
+    padding: 0 3px;
+    /* remove padding around workspace module */
 }
 
 #workspaces button {
-	padding: 0px 12px 0px 8px; /* fit with pill padding, 0px for not haveing duped vertical padding, 4px to make a square (4px value from module padding: ...#clock {padding >>4px<< 10px}) */
-	margin-left: 3px;
-	border: 1px solid transparent;
-	transition-property: background-color, border-left-color, border-right-color;
-	transition-duration: .1s;
-	font-size: 10px;
-	color: #c0caf5;
+    padding: 0px 12px 0px 8px;
+    /* fit with pill padding, 0px for not haveing duped vertical padding, 4px to make a square (4px value from module padding: ...#clock {padding >>4px<< 10px}) */
+    margin-left: 3px;
+    border: 1px solid transparent;
+    transition-property: background-color, border-left-color, border-right-color;
+    transition-duration: 0.1s;
+    color: #c0caf5;
 }
 
 #workspaces button.empty {
-	padding: 0px 10px;
+    padding: 0px 10px;
 }
 
 #workspaces button:first-child {
-	margin-left: 0;
-	background: #1e1e2e;
-    /* #1e1e2e */
-	border-color: #6c7086;
+    margin-left: 0;
 }
 
 #workspaces button.active {
-	/* active workspace */
-	background: #1e1e2e; /* background color */
-	/*border-color: #7aa2f7;*/
-	border-color: #b4befe;
-	/*color: #a6adc8;*/ /* icon(text) color */
-	/*	color: #c0caf5;*/
+    /* active workspace */
+    background: #1e1e2e;
+    /* background color */
+    border-color: #7aa2f7;
+    /*border-color: #b4befe;*/
+    /*color: #a6adc8;*/
+    /* icon(text) color */
+    /*	color: #c0caf5;*/
 }
 
 #workspaces button:hover {
-	background: #181825; /* hovered workspace color */
+    background: #181825;
+    /* hovered workspace color */
 }
 
 #battery {
-  color: #f9e2af;
+    color: #f9e2af;
 }
 
 #battery.warning:not(.charging) {
@@ -154,11 +156,3 @@ tooltip {
         background-color: #e64553;
     }
 }
-
-#power-profiles-daemon.performance{
-      color: #f38ba8;
-}
-#power-profiles-daemon.power-saver{
-          color: #a6e3a1;
-}
-
