--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,12 +1,15 @@
 * {
   font-family: "JetBrainsMono Nerd Font Propo";
   font-weight: bold;
+  padding-right: 4px;
+  padding-left: 4px;
   font-size: 14px;
   min-height: 0;
 }
 
 window#waybar {
-  background: transparent;
+  /* background: transparent; */
+  background: #1f2335;
   /* main window transparent background */
 }
 
@@ -35,24 +38,29 @@ tooltip {
 #power-profiles-daemon,
 #language,
 #network,
-#custom-updates {
+#custom-updates,
+#custom-notification {
   text-shadow: 1px 1px 2px black;
   /* text shadow, offset-x | offset-y | blur-radius | color */
-  background: #15161e;
+  background: #292e42;
   /* background color */
-  margin: 0px 4px 4px 4px;
+  margin: 0px 4px 6px 4px;
   /* empty spaces around */
-  padding: 4px 10px;
+  padding: 4px 8px;
   /* extend pill size, vertical then horizontal */
   box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4);
   /* pill background shadows */
-  border-radius: 5px;
+  border-radius: 10px;
   /* rounded corners */
-  color: #c0caf5;
+  color: #a9b1d6;
 }
 
 #custom-updates {
   color: #b4befe;
+}
+
+#clock {
+    color: #c0caf5;
 }
 
 #network {
@@ -60,15 +68,15 @@ tooltip {
 }
 
 #language {
-  color: #74c7ec;
+  color: #7aa2f7;
 }
 
 #backlight {
-  color: #94e2d5;
+  color: #c3e88d;
 }
 
 #pulseaudio {
-  color: #a6e3a1;
+  color: #ffc777;
 }
 
 #memory {
@@ -84,7 +92,7 @@ tooltip {
  * gaps_out (8px) + border size (2px) = 10px */
 
 #clock {
-  padding-right: 5px;
+  padding-right: 0px;
 }
 
 #privacy-item {
@@ -102,9 +110,10 @@ tooltip {
 }
 
 #workspaces button {
-  padding: 0px 12px 0px 8px;
+  padding: 0px 4px 0px 4px;
+  border-radius: 5px;
   /* fit with pill padding, 0px for not haveing duped vertical padding, 4px to make a square (4px value from module padding: ...#clock {padding >>4px<< 10px}) */
-  margin-left: 3px;
+  /* margin-left: 3px; */
   border: 1px solid transparent;
   transition-property: background-color, border-left-color, border-right-color;
   transition-duration: 0.1s;
@@ -121,11 +130,11 @@ tooltip {
 
 #workspaces button.active {
   /* active workspace */
-  background: #6b6b6b;
-    color: #c7c7c7;
+  background: #3b4261;
+  color: #c7c7c7;
   font-weight: bolder;
   /* background color */
-  border-color: #7aa2f7;
+  border-color: #a9b1d6;
   /*border-color: #b4befe;*/
   /*color: #a6adc8;*/
   /* icon(text) color */
@@ -138,7 +147,7 @@ tooltip {
 }
 
 #battery {
-  color: #f9e2af;
+  color: #ff9e64;
 }
 
 #battery.warning:not(.charging) {
@@ -160,9 +169,10 @@ tooltip {
   }
 }
 
-#power-profiles-daemon.performance{
-      color: #f38ba8;
+#power-profiles-daemon.performance {
+  color: #f38ba8;
 }
-#power-profiles-daemon.power-saver{
-          color: #a6e3a1;
+
+#power-profiles-daemon.power-saver {
+  color: #a6e3a1;
 }
